# agentgrade

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agentgrade.yml  ci.yml  publish.yml
agentgrade/: __init__.py  cli.py  config.py  credit.py  evaluators.py  improve.py  report.py  rewards.py  runner.py  trace.py
agentgrade/integrations/: __init__.py  generic.py  langgraph.py
assets/: demo.cast
examples/ddp_coding_agent/: agent.py  agentgrade.yaml
examples/inferred_agent/: agent.py  agentgrade.yaml  plugins.py
examples/simple_agent/: agent.py  agentgrade.yaml
scripts/: demo.sh
tests/: __init__.py  test_credit_and_improve.py  test_evaluators.py  test_hardening.py  test_inference_and_plugins.py  test_langgraph_adapter.py  test_record_replay_and_json.py  test_runner.py
