[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgrade"
version = "0.1.0"
description = "Pytest for multi-agent systems: regression tests, credit assignment, and prompt patches for AI agent workflows."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Shengyong Niu", email = "niu.shengyong@gmail.com" }]
keywords = [
    "ai-agents",
    "agents",
    "testing",
    "ci",
    "llm",
    "multi-agent",
    "pytest",
    "langgraph",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
langgraph = ["langgraph>=1.0", "langchain-core>=0.3"]

[project.scripts]
agentgrade = "agentgrade.cli:app"

[project.urls]
Homepage = "https://github.com/shengyongniu/agentgrade"
Repository = "https://github.com/shengyongniu/agentgrade"
Issues = "https://github.com/shengyongniu/agentgrade/issues"
Documentation = "https://github.com/shengyongniu/agentgrade#readme"
Changelog = "https://github.com/shengyongniu/agentgrade/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["agentgrade*"]
exclude = ["examples*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
